# DB-Forge-MK1

./: .env.example  .gitignore  CHANGELOG.md  FRONTEND_COMPLETE.md  INTEGRATION_COMPLETE.md  Makefile  QUICK_REFERENCE.md  README.md  TODO.md  context.md  demo_integration.js  docker-compose.yml
clients/: INTEGRATION.md  Makefile  README.md  SUMMARY.md
clients/cpp/: CMakeLists.txt  README.md
clients/cpp/examples/: CMakeLists.txt  advanced_example.cpp  basic_example.cpp
clients/cpp/include/dbforge/: client.hpp  database.hpp  dbforge.hpp  exceptions.hpp  types.hpp
clients/cpp/src/: dbforge_client.cpp  dbforge_database.cpp  dbforge_exceptions.cpp  http_client.cpp  http_client.hpp  json_utils.cpp  json_utils.hpp
clients/cpp/tests/: CMakeLists.txt  test_client.cpp
clients/python/: README.md  pytest.ini  setup.py
clients/python/dbforge_client/: __init__.py  async_client.py  cli.py  client.py  database.py  exceptions.py
clients/python/examples/: async_usage.py  basic_usage.py
clients/python/tests/: test_client.py
clients/tui/: Makefile  README.md  pyproject.toml
clients/tui/examples/: basic_usage.py
clients/tui/src/dbforge_tui/: __init__.py  app.py  config.py  main.py  tui.tcss
clients/tui/src/dbforge_tui/api/: __init__.py  client.py
clients/tui/src/dbforge_tui/widgets/: __init__.py  dashboard.py  database_manager.py  query_editor.py  table_browser.py
clients/tui/tests/: test_config.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  PROJECT-OVERVIEW.md  REVERSE-PROXY-NOTES.md
frontend/: README.md  app.js  index.html
infra/: .env.example  docker-compose.dev.yml  docker-compose.yml
infra/caddy/: Caddyfile
infra/db-worker-base/: Dockerfile
infra/traefik/: traefik.yml
scripts/: client.sh  test.sh  test_auth_and_core.sh  test_columns.json  test_cors.sh  test_query.json  test_rows.json  test_rows_for_stats.json  test_table.json  test_table_for_stats.json
secrets/: admin.json
services/db-gateway/: Dockerfile  requirements.txt
services/db-gateway/app/: main.py
services/db-gateway/app/auth/: auth.py
services/db-gateway/app/providers/: database.py
services/db-gateway/app/routes/: admin.py  data.py
services/db-gateway/app/services/: database.py
services/frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
services/frontend/src/app/: layout.tsx  page.tsx
services/frontend/src/app/connections/: page.tsx
services/frontend/src/app/databases/: page.tsx
services/frontend/src/app/logs/: page.tsx
services/frontend/src/app/security/: page.tsx
services/frontend/src/app/settings/: page.tsx
services/frontend/src/app/users/: page.tsx
services/frontend/src/components/connections/: connections-view.tsx
services/frontend/src/components/dashboard/: dashboard-shell.tsx  database-overview.tsx  system-metrics.tsx
services/frontend/src/components/databases/: databases-view.tsx  sql-editor.tsx
services/frontend/src/components/logs/: logs-view.tsx
services/frontend/src/components/security/: security-view.tsx
services/frontend/src/components/settings/: settings-view.tsx
services/frontend/src/components/ui/: loading-spinner.tsx  textarea.tsx
services/frontend/src/components/users/: users-view.tsx
services/frontend/src/lib/: api.ts
src/db-gateway/: Dockerfile  auth.py  main.py  requirements.txt
src/db-gateway/app/: main.py
src/db-gateway/app/auth/: auth.py
src/db-gateway/app/models/: database.py
src/db-gateway/app/routes/: admin.py
src/db-gateway/app/utils/: constants.py
testing/: test_db_gateway.py
tmp/: fastapi_integration.py
