[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbforge-tui"
version = "1.0.0"
description = "Terminal User Interface for DB-Forge - Beautiful, interactive database management"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Praetorian DB-Forge Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
keywords = ["database", "tui", "terminal", "sqlite", "dbforge", "interactive"]
requires-python = ">=3.8"
dependencies = [
    "textual>=0.41.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
    "click>=8.0.0",
    "aiofiles>=22.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.991",
    "textual-dev>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/praetorian/db-forge-mk1"
Repository = "https://github.com/praetorian/db-forge-mk1.git"
Issues = "https://github.com/praetorian/db-forge-mk1/issues"

[project.scripts]
dbforge-tui = "dbforge_tui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dbforge_tui"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true